--- a/Question-1-keyboard-accessibility.html
+++ b/Question-1-keyboard-accessibility.html
@@ -24,9 +24,7 @@ body {
 a{
   color: #006b3a;
 }
-main a{
-  outline: none;
-}
+/* Removed a outline:none in order for link focus to be visible */
 h2 {
   margin-top: 0;
 }
@@ -206,7 +204,8 @@ article p {
       <nav class="menu">
         <a href="#">Home</a>
         <a href="#">Politics</a>
-        <a href="#" tabindex="-1">Business</a>
+        <!-- Removed tab index -->
+        <a href="#">Business</a>
         <a href="#">Entertainment</a>
         <a href="#">Sports</a>
         <a href="#" class="btn-search pull-right"><img src="https://raw.githubusercontent.com/udacity/ud891/2de2a0688c68809a3b453db3a24b1a59e8401459/lesson2-focus/02-dom-order/images/search.svg" alt="Search" />Search</a> 
@@ -218,8 +217,8 @@ article p {
     <div class="container">
       <h3>Like the Funion? Consider joining our newsletter!</h3>
       <input type="text">
-      <button type="button" onfocus="getFocus()">Sign up</button></div>
-      
+      <!-- Changed onfocus to onclick so that the sign up button isnt automatically clicked upon gaining focus -->
+      <button type="button" onclick="getFocus()">Sign up</button></div>
     </div>
   </div>
   <main class="container">
@@ -239,11 +238,13 @@ article p {
     <div class="side-by-side">
       <div class="column">
         <div class="tier-header">
-          <h2 tabindex="0">In the news</h2>
+          <!-- Removed tab index -->
+          <h2>In the news</h2>
         </div>
         <article>
           <h3 class="headline">Bee wonders if maybe everyone else is a drone and he's the only one who has it "figured out."</h3>
-          <p><a href="#" tabindex="1"><b>Read More</b></a></p>
+          <!-- Removed tab index -->
+          <p><a href="#"><b>Read More</b></a></p>
           <img src="https://github.com/udacity/ud891/blob/gh-pages/lesson2-focus/02-dom-order/images/bee.jpg?raw=true" alt="A bee on top of a flower" />
         </article>
       </div>
