--- a/Question-2-3-webform.html
+++ b/Question-2-3-webform.html
@@ -29,23 +29,30 @@
         <h1>Feedback form</h1>
     <form>
         <div class="control">
-          <label>Full name <span class="required">*</span></label><input id="name" name="name" type="text" />
+          <!--  Connected label to input using for attribute
+                Added aria-required=true to Full name so screen readers know its required -->
+          <label for="name">Full name <span class="required">*</span></label><input id="name" name="name" type="text" aria-required="true" />
         </div>
         <div class="control">
-          <label>Biography</label><textarea id="biography" name="biography" type="text"></textarea>
-          <span>Include examples on your skills in JavaScript.</span>
+            <!-- Connected label to text area using for attribute
+                 Added aria-required=true to biography so screen readers know its required
+                 Added aria-describedby so screen readers can hear inline instructions -->
+          <label for="biography">Biography<span class="required">*</span></label><textarea id="biography" name="biography" type="text" aria-describedby="bioInfo" aria-required="true"></textarea>
+          <span id="bioInfo">Include examples on your skills in JavaScript.</span>
         </div>
         
           <div>Gender</div>
           <div class="control">
-            <input id="gender_male" name="gender" type="radio" value="male" /><label>Male</label>
+            <!-- Connected male label to input -->
+            <input id="gender_male" name="gender" type="radio" value="male" /><label for="gender_male">Male</label>
           </div>
           <div class="control">
-            <input id="gender_female" name="gender" type="radio" value="female" /><label>Female</label>
+            <input id="gender_female" name="gender" type="radio" value="female" /><label for="gender_female">Female</label>
           </div>
-        
         <div class="control">
-          <input id="accept_agbs" name="accept_agbs" type="checkbox" value="1" /><label>I accept the terms and conditions</label>
+            <!--  Connected agbs label to input using for attribute
+                  Added aria-required=true to agbs so screen readers know its required -->
+          <input id="accept_agbs" name="accept_agbs" type="checkbox" value="1" aria-required="true"/><label for="accept_agbs">I accept the terms and conditions<span class="required">*</span></label>
         </div>
         <div class="control">
           <input name="validate" type="hidden" value="1" /><input type="submit" value="Register" />
